--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="txtSettingsPassword">Password</string>
     <string name="year_of_study">Year of study</string>
     <string name="study">Study</string>
+    <string name="saveSettings">Save</string>
 </resources>
