--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="submit_btn">Submit</string>
     <string name="log_out">Log Out</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
 </resources>
