--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,9 @@
     <string name="nav_marketplace">Study Marketplace</string>
     <string name="nav_settings">Settings</string>
     <string name="nav_rating">Rate Us</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="submit_btn">Submit</string>
     <string name="log_out">Log Out</string>
     <string name="open">open</string>
     <string name="close">close</string>
+    <string name="myclasses_warning">Make sure to set your study program in the settings before using this module</string>
 </resources>
