- Ažurirani lokalni event i eventtype modeli - Popravljeno dohvaćanje eventa po rasporedu za određeni semestar - Popravljeno računanje postotaka u attendance tabu - Zamijenjeno dohvaćanje i rukovanje s vremenom sa LocalDate - Dorađen Schedule da sada točno prikazuje statuse prisutnosti - Dorađen Dialog prozor kod Schedule, sada se ispisuje datum logiranja statusa korisnika - Očišćen kod od nepotrebnih Log.i/e

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="log_out">Log Out</string>
     <string name="open">open</string>
     <string name="close">close</string>
-    <string name="myclasses_warning">Make sure to set your study program in the settings before using this module</string>
+    <string name="myclasses_warning">Make sure to set your study program and semester in the settings before using this module</string>
     <string name="txtSettings_first_name">First name</string>
     <string name="textEditorSettingsFistName">First Name</string>
     <string name="last_name">Last name</string>
