--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,6 @@
     <string name="btDesc">Make sure to turn on <font color='#01C6DB'>Bluetooth</font> for your attendance to be automatically noted!</string>
     <string name="set_default_image">SET DEFAULT IMAGE</string>
     <string name="choose_image">Choose image</string>
-    <string name="tardiness">TARDINESS (%)</string>
+    <string name="tardiness">TARDINESS <font color='#818186'>(%)</font></string>
     <string name="descriptionStudyImprovments">It shows that your peak performance is when you have at least <font color='#01C6DB'>this</font> amount of oxygen in the room.</string>
 </resources>
